# neuron-ai

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  continuum-slm-architecture.md  download (3).txt  neuron-ai.log.txt  speed_test.py  test_speed.py  test_trained_model.py
.git_backup/: COMMIT_EDITMSG  config  index
.git_backup/refs/heads/: master
.git_backup/refs/remotes/origin/: master
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-tests.yml
continuum/: ARCHITECTURE_v2_ENHANCED.md  MOBILE_SPEED_MASTER_PLAN.md  __init__.py  requirements.txt  run.py
continuum.cpp/: CMakeLists.txt  Makefile  README.md
continuum.cpp/android/: CMakeLists.txt  build.sh
continuum.cpp/android/app/src/main/java/com/continuum/slm/: ContinuumEngine.kt  MainActivity.kt
continuum.cpp/android/app/src/main/res/layout/: activity_main.xml
continuum.cpp/exports/: export_gguf.py  export_to_cpp.py
continuum.cpp/include/: model.h  sampler.h  tensor.h  threadpool.h  tokenizer.h
continuum.cpp/jni/: continuum_jni.cpp
continuum.cpp/src/: continuum.cpp  model.cpp  sampler.cpp  tensor.cpp  threadpool.cpp  tokenizer.cpp
continuum/benchmarks/: __init__.py  phase2_benchmark.py
continuum/colab/: continuum_100m_training.ipynb
continuum/conversation/: __init__.py  dataset.py  manager.py  template.py
continuum/inference/: __init__.py  engine.py
continuum/kaggle/: continuum_100m_training.ipynb
continuum/model/: __init__.py  attention.py  layers.py  model.py  test_attention.py  test_layers.py  test_model.py  test_vision.py  vision.py
continuum/tokenizer/: __init__.py  bpe.py  test_tokenizer.py
continuum/training/: __init__.py  losses.py  parallel_scan.py  trainer.py
continuum/ui/: app.py
continuum/ui/templates/: chat.html
